--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,13 +3,24 @@
   xmlns:th="http://www.thymeleaf.org"
   xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
+<link href = "css/styles.css" rel = "stylesheet"/>
+<link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+  <script
+    src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script
+    src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <title>Security with Spring Boot</title>
+
 </head>
 <body>
-  <h1>Access is Denied!</h1>
-  <a style="color: blue" th:href="@{/}">Home</a>
-  <form th:action="@{/logout}" method="post">
-    <input type="submit" value="Sign Out" />
-  </form>
+	<span class="menu-right">
+		<a href="/" class="btn btn-warning" >Nearby Shops</a>
+		<a href="/likedShops" class="btn btn-primary">My preferred Shops</a>
+		<a href="/logout" class="btn btn-light" >Logout</a>
+	</span>
+	<div>Welcome home</div>
+
 </body>
+
 </html>
