--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,29 +1,38 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Custom sign up Page</title>
+<title>Custom sign up Page</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
-<div>
-    <form name="f" th:action="@{/signed}" method="post" @ModelAttribute="userr">
-        <fieldset>
-            <legend>Please Sign up It's FREE</legend>
-            <div th:if="${param.error}" class="alert alert-error">
-                Invalid username and password.
-            </div>
-            <div th:if="${param.logout}" class="alert alert-success">
-                You have been logged out.
-            </div>
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username"/>
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password"/>
-            <div class="form-actions">
-                <button type="submit" class="btn">Sign up</button>
-            </div>
-        </fieldset>
-    </form>
-    
-    <a href="/login" >Login</a>
-</div>
+<body class="container" style="margin: 50px">
+	<div class="row col-sm-6" 
+        style="border: 1px ridge #003312; padding:20px; float: none; margin: 0 auto;">
+	<h5 class="text-center" style="font-size: 25px">Please Sign up It's FREE</h5>
+		<form name="f" th:action="@{/signed}" method="post"
+			@ModelAttribute="userr">
+			<div th:if="${param.error}" class="alert alert-error">Invalid
+				username and password.</div>
+			<div th:if="${param.logout}" class="alert alert-success">You
+				have been logged out.</div>
+			<div class="form-group">
+				<label for="username">Username</label> 
+				<input type="text" class="form-control" placeholder="Enter UserName" id="username" name="username" />
+			</div>
+			<div class="form-group">
+				<label for="password">Password</label> 
+				<input type="password" class="form-control" placeholder="Enter Password" id="password" name="password" />
+			</div>
+			<button type="submit" class="btn btn-primary btn-block">Sign
+				up</button>
+		</form>
+
+		<a href="/login">Login</a>
+	</div>
 </body>
 </html>
