--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,3 +1,24 @@
-span.menu-right{position:absolute;
-   				top:4px;
-  				right:0;}
+span.menu-right{
+	position:absolute;
+   	top:4px;
+  	right:0;
+  	}
+  				
+ul{
+	float:left
+}
+
+li{
+	list-style-type: none;
+}
+
+li#pic{
+	width : 205px;
+	height : 200px;
+	border : solid 2px;
+}
+div.container{
+	text-align: center;
+	margin-top : 80px;
+	margin-left : 150px;
+}
